--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
     "nodemon": "^1.11.0",
-    "nyc": "^10.1.2"
+    "nyc": "^10.1.2",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
-    "env-cmd": "^4.0.0"
+    "body-parser": "^1.16.1",
+    "debug": "^2.6.1",
+    "env-cmd": "^4.0.0",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.2"
   },
   "config": {
     "commitizen": {
