--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,6 +1,8 @@
 {
   "development": {
-    "NODE_ENV": "development"
+    "NODE_ENV": "development",
+    "DEBUG": "http,db",
+    "DEBUG_COLORS": true
   },
   "production": {
     "NODE_ENV": "production"
