--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
+    "faker": "^3.1.0",
     "faucet": "^0.0.1",
     "nodemon": "^1.11.0",
     "nyc": "^10.1.2",
