feat(authentication): added GitHub authentcation :D and the user model

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -2,10 +2,16 @@
   "development": {
     "NODE_ENV": "development",
     "DEBUG": "http,db",
-    "DEBUG_COLORS": true
+    "DEBUG_COLORS": true,
+    "GITHUB_CLIENT_ID": "6cde2e778fdae0fa33cb",
+    "GITHUB_CLIENT_SECRET": "807c3fdbde69bb1010ab405bfe7b231a2c18bfb0",
+    "HOST": "http://127.0.0.1:3001"
   },
   "production": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "GITHUB_CLIENT_ID": "6cde2e778fdae0fa33cb",
+    "GITHUB_CLIENT_SECRET": "807c3fdbde69bb1010ab405bfe7b231a2c18bfb0",
+    "HOST": "http://127.0.0.1:3000"
   },
   "test": {
     "NODE_ENV": "test"
