--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
   },
   "dependencies": {
     "body-parser": "^1.16.1",
+    "cookie-parser": "^1.4.3",
     "debug": "^2.6.1",
     "env-cmd": "^4.0.0",
     "express": "^4.14.1",
-    "mongoose": "^4.8.2"
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.8.2",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0"
   },
   "config": {
     "commitizen": {
