--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "debug": "^2.6.1",
     "env-cmd": "^4.0.0",
     "express": "^4.14.1",
